--- a/TestWork/packages.config
+++ b/TestWork/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.14.0" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.5.3" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
@@ -44,6 +45,7 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
